apps/production/vibrato/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vibrato
  namespace: vibrato
spec:
  template:
    spec:
      containers:
        - name: vibrato
          image: ghcr.io/gjcourt/vibrato:2026-08-27-01a3482
