apps/production/vibrato/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vibrato-http
  namespace: vibrato-prod
spec:
  hostnames:
    - vibrato.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vibrato-https
  namespace: vibrato-prod
spec:
  hostnames:
    - vibrato.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: vibrato
          port: 8080
